<resources>
    <string name="app_name">Immigration Form</string>
    <string name="action_settings">Settings</string>
    <string name="image">Image</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nationality">Nationality</string>
    <string name="address">Address</string>
    <string name="addrLine1">Address Line 1</string>
    <string name="addrLine2">Address Line 2</string>
    <string name="addrCity">City/Town </string>
    <string name="addrPostcode">Post Code</string>
    <string name="addrCountry">Country</string>
    <string name="email">Email ID</string>
    <string name="buttOK">OK</string>
    <string name="buttCancel">Cancel</string>

    <string name="country_prompt">Select a country</string>
    <string-array name="country_array">
        <item>United States of America</item>
        <item>India</item>
        <item>China</item>
        <item>United</item>
        <item>Syria</item>
        <item>Israel</item>
        <item>North Korean</item>
        <item>Pakistan</item>
        <item>Uganda</item>
        <item>Afganistan</item>
    </string-array>
</resources>
