<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.tae.myapp.immigrationform.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/icon" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fLabel_fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivPhoto">

            <EditText
                android:id="@+id/etFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fLabel_lName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fLabel_fName"
            android:layout_toRightOf="@id/ivPhoto">

            <EditText
                android:id="@+id/etLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fLabel_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fLabel_lName"
            android:layout_toEndOf="@id/ivPhoto"
            android:layout_toRightOf="@id/ivPhoto">

            <EditText
                android:id="@+id/etDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:onClick="onDOBClicked" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivPhoto"
            android:layout_marginRight="16dp"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivPhoto"
            android:layout_toRightOf="@id/tvGender"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvNationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rgGender"
            android:layout_marginRight="16dp"
            android:text="@string/nationality" />

        <Spinner
            android:id="@+id/sNationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvNationality"
            android:layout_below="@id/rgGender"
            android:layout_toRightOf="@id/tvNationality"
            android:prompt="@string/country_prompt" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sNationality"
            android:layout_marginRight="16dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvEmail"
            android:layout_below="@id/sNationality"
            android:layout_toRightOf="@id/tvEmail" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmail"
            android:layout_marginRight="16dp"
            android:text="@string/address" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddrLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmail"
            android:layout_toRightOf="@id/tvAddress">

            <EditText
                android:id="@+id/etAddrLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addrLine1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddrLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilAddrLine1"
            android:layout_toRightOf="@id/tvAddress">

            <EditText
                android:id="@+id/etAddrLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addrLine2" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddrCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilAddrLine2"
            android:layout_toRightOf="@id/tvAddress">

            <EditText
                android:id="@+id/etAddrCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addrCity" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddrPostcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilAddrCity"
            android:layout_toRightOf="@id/tvAddress">

            <EditText
                android:id="@+id/etAddrPostcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addrPostcode" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddrCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilAddrPostcode"
            android:layout_toRightOf="@id/tvAddress">

            <EditText
                android:id="@+id/etAddrCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addrCountry" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/buttOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilAddrCountry"
            android:layout_centerHorizontal="true"
            android:text="@string/buttOK" />

        <Button
            android:id="@+id/buttCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilAddrCountry"
            android:layout_toRightOf="@id/buttOK"
            android:text="@string/buttCancel" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttOK" />


    </RelativeLayout>

</ScrollView>